testing on local server

--- a/Pages/About.html
+++ b/Pages/About.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="../design.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -22,7 +23,7 @@
     </div>
 
     <!--Hero section ends here-->
-
+    <!---ABout Page cow images-->
     <div class="about-image-container">
 
         <div class="first-column-about">
@@ -33,8 +34,133 @@
             <img src="../Images-About/GIR COW 2.png" alt="Gir Cow">
         </div>
     </div>
+    <!--Our Story starts here-->
+    <div class="middle-container-about">
+        <h2>Our Story</h2>
+        <p>Gauras, founded in 2020 with the mission of "From Farm to Your Home," has evolved into a trusted name that
+            represents all things pure and natural. We specialize in selling organic Indian cow breed products and pride
+            ourselves on our unique perspective towards what we do. Our products are more than just commodities; they
+            provide nourishment and sustenance. That's why we ensure that every bit of our products is packed with all
+            of their natural goodness, from the farm to your home, without any middleman involvement under our strict
+            supervision, guaranteeing high quality. Our farm, located in a rural area, about 5 km from Neamatpur,
+            provides a pure and unpolluted environment for our pure breed Gir cows, which are fed with natural grasses,
+            leaves, and other hygienic materials like carrots, beetroots, cane, and more. We maintain a healthy and open
+            environment for our cows and do not use growth hormone injections to increase milk production. Our cows
+            undergo bi-monthly check-ups from a team of veterinary doctors, ensuring that you receive the utmost purity.
+            At Gauras, we specialize in producing and promoting natural, wholesome, and healthy food and bi-products
+            that are free from harmful toxins, fertilizers, and chemicals. We carefully source and make all of our
+            products with hygiene and love.</p>
 
-    <script src="" async defer></script>
+        <img src="../Images-About/Hill image.png" alt="Hill-Village">
+    </div>
+
+    <!--Our Mission-->
+
+    <div class="container-about-cards-block">
+
+        <div class="about-card-text-heading">
+
+
+            <h2>OUR MISSION</h2>
+            <p>Gauras aims to educate individuals about the incredible health benefits of products made from Indian cow
+                breeds. Through nurturing and milking our desi cows, we provide access to fresh, unadulterated, pure,
+                and organic A2 protein products. Our dual mission is to save our indigenous cow breeds and promote good
+                health and well-being for all.</p>
+        </div>
+        <div class="about-middle-card-section">
+            <div class="middle-cards-2x2"><img src="../Images/Full access.png" alt="Full Access">
+                <h3>Total Transparent Access To Our Farm</h3>
+                <p>Our philosophy is centered around transparency and doing what is right. To ensure our customers are
+                    fully informed, we offer complete access to our farm and welcome them to visit at their convenience.
+                </p>
+            </div>
+            <div class="middle-cards-2x2"><img src="../Images/healthcare.png" alt="Your health">
+                <h3>Embracing a Holistic and Nourishing Lifestyle</h3>
+                <p>Gauras products offer the purest and most natural form of dairy, free from any additives. Moreover,
+                    they are rich in A2 beta-casein protein, known for its potential health benefits.</p>
+            </div>
+
+        </div>
+        <div class="about-middle-card-section">
+            <div class="middle-cards-2x2"><img src="../Images/Full access.png" alt="Full Access">
+                <h3>Total Transparent Access To Our Farm</h3>
+                <p>Our philosophy is centered around transparency and doing what is right. To ensure our customers are
+                    fully informed, we offer complete access to our farm and welcome them to visit at their convenience.
+                </p>
+            </div>
+            <div class="middle-cards-2x2"><img src="../Images/healthcare.png" alt="Your health">
+                <h3>Embracing a Holistic and Nourishing Lifestyle</h3>
+                <p>Gauras products offer the purest and most natural form of dairy, free from any additives. Moreover,
+                    they are rich in A2 beta-casein protein, known for its potential health benefits.</p>
+            </div>
+
+        </div>
+
+    </div>
+
+    <div Id="counter-box">
+        <div class="counter-card">
+            <img src="../Images-About/Gauras-prod-logo.png" alt="Gauras">
+            <span class="num-counter" data-val="100">000</span>
+            <p>GAURAS
+                PRODUCTS</p>
+        </div>
+        <div class="counter-card"><img src="../Images-About/happy-cows-logo.png" alt="Happy Cows">
+            <span class="num-counter" data-val="200">000</span>
+            <p>HAPPY COWS</p>
+        </div>
+        <div class="counter-card"><img src="../Images-About/happy-customers-logo.png" alt="Happy Customers">
+            <span class="num-counter" data-val="300">000</span>
+            <p>HAPPY CUSTOMERS</p>
+        </div>
+        <div class="counter-card"><img src="../Images-About/delivery-logo.png" alt="Delivery">
+            <span class="num-counter" data-val="400">000</span>
+            <p>BOTTLES DELIVERED DAILY</p>
+        </div>
+    </div>
+
+    <div class="testimonial-container">
+        <div class="test-heading">
+            <h2>WHAT OUR CUSTOMERS SAY</h2>
+        </div>
+        <div class="test-cards-container">
+            <div class="card-testiminoals">
+                <img class="image-logo-test" src="../Images-About/Review 1.png" alt="Review">
+                <h4>PRINCE PATHAK</h4>
+                <p class="test-intro-company">FOUNDER <br> Raise Your Voice</p>
+                <p>One of the most ethical and finest cow Farm I have ever seen. Their organic products, specially
+                    Gauras Ghee is awesome. Highly recommended & must visit place.</p>
+                <img src="../Images-About/STAR.png" alt="Rating">
+            </div>
+            <div class="card-testiminoals">
+                <img class="image-logo-test" src="../Images-About/Review 1.png" alt="Review">
+                <h4>Title</h4>
+                <p class="test-intro-company">introduction</p>
+                <p>second intro</p>
+                <img src="../Images-About/STAR.png" alt="Rating">
+            </div>
+            <div class="card-testiminoals">
+                <img class="image-logo-test" src="../Images-About/Review 1.png" alt="Review">
+                <h4>Title</h4>
+                <p class="test-intro-company">introduction</p>
+                <p>second intro</p>
+                <img src="../Images-About/STAR.png" alt="Rating">
+            </div>
+        </div>
+
+    </div>
+    <div class="call-to-action-about">
+        <h2>Get The Best A2 Milk & Organic Products For Your Family!!</h2>
+        <button><a href="#">REACH OUT</a></button>
+
+    </div>
+    <footer>
+
+        <h2>This is footer section</h2>
+
+    </footer>
+
+    <script src="../logic.js"></script>
 </body>
 
 </html>
