Products page complete

--- a/Home.html
+++ b/Home.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="../design.css">
+    <link rel="stylesheet" href="./design.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -38,35 +38,35 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="../Images/hero milk.jpg" class="d-block w-100" alt="...">
+                <img src="./Images/hero milk.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h2>We Are Gauras!!</h2>
                     <p>The Best A2 Milk Products In Town</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="../Images/hero Ghee.jpg" class="d-block w-100" alt="...">
+                <img src="./Images/hero Ghee.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h2>The Best A2 Ghee For Your Family's Health!!</h2>
 
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="../Images/hero diya.jpg" class="d-block w-100" alt="...">
+                <img src="./Images/hero diya.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h2>The Best Cow Dung Diya For Your Festivals!!</h2>
 
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="../Images/hero Cake.jpg" class="d-block w-100" alt="...">
+                <img src="./Images/hero Cake.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h2>The Best Cow Dung Cake For Your Household!!</h2>
 
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="../Images/hero  V C.jpg" class="d-block w-100" alt="...">
+                <img src="./Images/hero  V C.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h2>The Best Organic Verrmicompost For Your Garden!!</h2>
 
@@ -91,19 +91,19 @@
 
     <div class="home-card-container">
         <div class="card">
-            <img src="../Images/the farm.png" alt="Fresh Farm">
+            <img src="./Images/the farm.png" alt="Fresh Farm">
             <p>Fresh Out Of The Farm</p>
         </div>
         <div class="card">
-            <img src="../Images/healthy icon.png" alt="Health">
+            <img src="./Images/healthy icon.png" alt="Health">
             <p>All-Healthy and Nutritious</p>
         </div>
         <div class="card">
-            <img src="../Images/natural icon.png" alt="Natural">
+            <img src="./Images/natural icon.png" alt="Natural">
             <p>100% Real and Authentic</p>
         </div>
         <div class="card">
-            <img src="../Images/hug icon.png" alt="Heart">
+            <img src="./Images/hug icon.png" alt="Heart">
             <p>Crafted with Care.</p>
         </div>
     </div>
@@ -111,7 +111,7 @@
     <!--Homepage cards section ends here-->
     <div class="homepage-about-container">
         <div class="left-image">
-            <img src="../Images/Soya milk.png" alt="">
+            <img src="./Images/Soya milk.png" alt="">
         </div>
         <div class="right-text">
             <h4>ABOUT GAURAS</h4>
@@ -136,18 +136,18 @@
         </div>
         <div class="about-cards-container">
             <div class="cards-about">
-                <img src="../Images/cow icon.png" alt="Icon-cow">
+                <img src="./Images/cow icon.png" alt="Icon-cow">
                 <h3>The Unique Indian Gir Cow Breed</h3>
                 <p>We exclusively source our A2 milk from the finest Indian breed Gir Cows that graze in the forest and
                     are known for their excellent health and milk quality.</p>
             </div>
             <div class="cards-about">
-                <img src="../Images/No injection.png" alt="injection">
+                <img src="./Images/No injection.png" alt="injection">
                 <h3>No Usage Of Hormonal Injections</h3>
                 <p>You can trust the purity of our product as we ensure that none of our cows are administered with
                     synthetic growth hormones via injections.</p>
             </div>
-            <div class="cards-about"><img src="../Images/planet-earth.png" alt="Authentic">
+            <div class="cards-about"><img src="./Images/planet-earth.png" alt="Authentic">
                 <h3>100% Real and Authentic</h3>
                 <p>Our products are completely natural, unrefined, and in their raw form. We ensure 100% purity with no
                     additives or alterations, and only contain A2 protein without any removal of its natural fat
@@ -156,18 +156,18 @@
 
         </div>
         <div class="about-cards-container">
-            <div class="cards-about"><img src="../Images/Full access.png" alt="Full Access">
+            <div class="cards-about"><img src="./Images/Full access.png" alt="Full Access">
                 <h3>Total Transparent Access To Our Farm</h3>
                 <p>Our philosophy is centered around transparency and doing what is right. To ensure our customers are
                     fully informed, we offer complete access to our farm and welcome them to visit at their convenience.
                 </p>
             </div>
-            <div class="cards-about"><img src="../Images/healthcare.png" alt="Your health">
+            <div class="cards-about"><img src="./Images/healthcare.png" alt="Your health">
                 <h3>Embracing a Holistic and Nourishing Lifestyle</h3>
                 <p>Gauras products offer the purest and most natural form of dairy, free from any additives. Moreover,
                     they are rich in A2 beta-casein protein, known for its potential health benefits.</p>
             </div>
-            <div class="cards-about"><img src="../Images/delivery-man.png" alt="Doorstep delivery">
+            <div class="cards-about"><img src="./Images/delivery-man.png" alt="Doorstep delivery">
                 <h3>Free Delivery At Your Door</h3>
                 <p>We are committed to delivering the highest quality products directly to your doorstep at no
                     additional cost to you.</p>
@@ -190,10 +190,10 @@
         <div id="image-box-triple">
             <div class="triple-image">
                 <p>HF & Jersey Cows</p>
-                <img src="../Images/jersey cow.png" alt="Jersey Cow">
+                <img src="./Images/jersey cow.png" alt="Jersey Cow">
             </div>
             <div class="triple-image">
-                <img src="../Images/Milk arrow A1.jpg" alt="A1 Milk">
+                <img src="./Images/Milk arrow A1.jpg" alt="A1 Milk">
             </div>
             <div class="triple-image">
                 <p>Problems From A1 Milk:</p>
@@ -221,10 +221,10 @@
         <div id="image-box-triple">
             <div class="triple-image">
                 <p>Indian Gir Cow</p>
-                <img src="../Images/gir cow.png" alt="Gir Cow">
+                <img src="./Images/gir cow.png" alt="Gir Cow">
             </div>
             <div class="triple-image">
-                <img src="../Images/A2 Milk arrow.png" alt="A2 Milk">
+                <img src="./Images/A2 Milk arrow.png" alt="A2 Milk">
             </div>
             <div class="triple-image">
                 <p>Benefits From A2 Milk:</p>
@@ -260,11 +260,11 @@
 
         <div class="product-card-container">
             <div class="product-card">
-                <img src="../Images/milk bottle.png" alt="Milk Bottle">
+                <img src="./Images/milk bottle.png" alt="Milk Bottle">
                 <button><a href="#">Know More</a></button>
             </div>
             <div class="product-card">
-                <img src="../Images/ghee bottle.png" alt="Ghee bottle" id="ghee-product-pic">
+                <img src="./Images/ghee bottle.png" alt="Ghee bottle" id="ghee-product-pic">
                 <button><a href="#">Know More</a></button>
             </div>
         </div>
@@ -296,7 +296,7 @@
         <h2>This is footer section</h2>
 
     </footer>
-    <script src="../logic.js"></script>
+    <script src="./logic.js"></script>
 </body>
 
 </html>
