--- a/Pages/Products.html
+++ b/Pages/Products.html
@@ -98,6 +98,17 @@
 
     </div>
 
+    <div class="call-to-action-products">
+        <h2>Get The Best A2 Milk & Organic Products For Your Family!!</h2>
+        <button><a href="#">REACH OUT</a></button>
+
+    </div>
+    <footer>
+
+        <h2>This is footer section</h2>
+
+    </footer>
+
     <script src="" async defer></script>
 </body>
 
